Fix for z-index stacking after modal usage.

--- a/semantic/src/definitions/modules/dimmer.less
+++ b/semantic/src/definitions/modules/dimmer.less
@@ -119,7 +119,7 @@ body.dimmable > .dimmer {
 ---------------*/
 
 .blurring.dimmable > :not(.dimmer) {
-  filter: @blurredStartFilter;
+  filter: initial;  // initial restores normal z-index stacking.
   transition: @blurredTransition;
 }
 .blurring.dimmed.dimmable > :not(.dimmer) {
